<resources>
    <string name="app_name">Multiple Choice Quiz</string>
    <string name="multiple_choice_quiz">Multiple Choice Quiz</string>
    <string name="start_quiz">Start Quiz</string>
    <string name="score_0">Score: 0</string>
    <string name="question_1_x">Question: 1/x</string>
    <string name="Time">00:30</string>
    <string name="option1">Option1</string>
    <string name="option2">Option2</string>
    <string name="option3">Option3</string>
    <string name="Questions">Question display in here</string>
    <string name="confirm_next">Confirm</string>
    <string name="high_score">High Score</string>
    <string name="category">Category:</string>
    <string name="difficulty">Difficulty:</string>
    <string name="etQuestion">Enter your question here</string>
    <string name="option_1">Option 1</string>
    <string name="option_2">Option 2</string>
    <string name="option_3">Option 3</string>
    <string name="add_question_title">Add Question</string>
    <string name="button_submit">Submit</string>
    <string name="add_new_question">Add new question</string>
    <string name="enter_answer_number">Enter answer number 1, 2 or 3</string>
</resources>
